--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <modules>
+    <module>test-demo</module>
+  </modules>
 
   <parent>
     <groupId>org.mybatis</groupId>
@@ -28,7 +31,7 @@
 
   <artifactId>mybatis</artifactId>
   <version>3.5.5-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>mybatis</name>
   <description>
@@ -237,7 +240,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.11</version>
+      <version>42.2.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
