--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,6 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <modules>
-    <module>test-demo</module>
-  </modules>
 
   <parent>
     <groupId>org.mybatis</groupId>
@@ -31,7 +28,7 @@
 
   <artifactId>mybatis</artifactId>
   <version>3.5.5-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
   <name>mybatis</name>
   <description>
